--- a/styles.css
+++ b/styles.css
@@ -198,7 +198,7 @@ br {
     height: 35px;
     background-color: #FF7A00;
     color: #FFF;
-    margin: 10px 10px 10px auto;
+    margin: 30px 10px 10px auto;
 }
 label {
     margin-bottom: 5px;
@@ -210,10 +210,13 @@ label {
     width: 350px;
     height: 300px;
     border-radius: 5px;
+    border: solid 2px;
+    border-color: #FF7A00;   
 }
 .findus-map {
     text-align: right;
     margin-right: 25px;
+     
 }
 
 
