--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,6 +23,12 @@ h1 {
 h2 {
     font-size: "Montserrat", sans-serif;
 }
+h3 {
+    font-size: 25px;
+}
+p {
+    font-size: 14px;
+}
 
 a {
     text-decoration: none;
@@ -33,8 +39,6 @@ a {
 a:hover {
     color: #FF7A00;
 }
-
-
 
 /* NAVBAR STYLING */
 
@@ -141,91 +145,6 @@ br {
     width: 234px;
     height: 326px;
 }
-
-
-
-
-
-/* About page styles */
-
-
-
-/* CONTACT PAGE STYLING */
-
-.contactus {
-    display: flex;
-    justify-content: center; 
-}
-.customerservice-img {
-    float: left;
-    margin-left: 3px;
-    margin-top: 75px;
-    width: 300px;
-    height: auto;
-}
-.needhelp {
-    background-color: #FF7A00;   
-    border-radius: 8px 0 0 8px;
-    width: 600px;
-    height: 550px;
-    margin-bottom: 30px;
-}
-.formbox {
-    display: flex;
-    flex-direction: column;
-    background-color: #262626;  
-    border-radius: 0 8px 8px 0;
-    width: 600px;
-    height: 550px;
-    margin-bottom: 30px;;
-}
-.fullname, .email {
-    margin-left: 10px;
-    width: 580px;
-    height: 40px;  
-    font-size: 40;
-}
-#message {
-    margin-left: 10px;
-    height: 250px;
-    width: 580px;
-}
-.submit-contact {
-    display: block;
-    border-color: #FF7A00;
-    border-radius: 4px;
-    width: 140px;
-    height: 35px;
-    background-color: #FF7A00;
-    color: #FFF;
-    margin: 30px 10px 10px auto;
-}
-label {
-    margin-bottom: 5px;
-    margin-top: 20px;
-    margin-left: 10px;
-    border-radius: 8px;
-}
-#findus {
-    width: 350px;
-    height: 300px;
-    border-radius: 5px;
-    border: solid 2px;
-    border-color: #FF7A00;   
-}
-.findus-map {
-    text-align: right;
-    margin-right: 25px;
-     
-}
-
-
-/* Cart page styles */
-
-
-
-/* Payment styles */
-
 
 
 /* Footer style */
