--- a/styles/index.css
+++ b/styles/index.css
@@ -1,95 +1,17 @@
-.banner{
+
+
+.preorder-img {
     position: relative;
-    background-color: #262626;
-    padding-bottom: 50px;
-    margin-top: 25px;
-    
+    width: 75%;
+    height: auto;
 }
-.heroImages {
-    position: relative;
-    display: flex;
-    margin-left: auto;
-    margin-right: auto;
-    width: 80%;
-    height: auto;   
-    border-radius: 1%;
-    
+
+.banner {
+    display: grid;
+    place-items: center;
 }
+
+
 .personPlaying {
-    max-width: 1080px;
-    height: auto;
-   
+    width: 50%;
 }
-
-.release-title {
-    position: absolute;
-    top: 2%;
-    font-size: 75px;   
-    text-align: center;
-    text-transform: uppercase;
-    z-index: 1;
-    left: 15%;
-}
-.release-info {
-    position: absolute;
-    bottom: 16%;
-    font-size: 50px;
-    z-index: 1;
-    left: 43%;
-}
-.playbtn {
-    text-transform: uppercase;
-    text-align: center;
-    position: absolute;
-    width: 15%;
-    height: auto;
-    left: 50%;
-    right: 50%;
-    bottom: 5%;
-    transform: translate(-50%, -50%);
-    border: #FF7A00 solid 2px; 
-    border-radius: 2%;
-    font-weight: bold;
-    padding: 15px;
-    z-index: 1;
-}
-.playbtn:hover {
-    border: #FF7A00 solid 2px;
-    background-color: #FF7A00; 
-}
-
-
-
-.information-line {    
-    display: flex;
-    justify-content: space-around;
-    background-color: black;
-}
-
-section {
-    padding: 20px;
-}
-.download-icon {
-    size: 50px;
-}
-
-
-
-.bottomleft {
-    align-items: center;
-}
-
-.bottomCta {
-    display: inline-block;
-    min-height: 50vh;
-    max-width: 720px;   
-}
-
-br {
-    clear: both;
-}
-.bottomCta:hover, .productImage:hover {
-    box-shadow: 0 0 26px RGBA(255,122,0,1);
-    transition: 0.5s;   
-}
-
