--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,11 @@
 
 
 /* BODY STYLES */
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body {
     font-family: Montserrat, sans-serif;
     background-color: #262626;
@@ -22,21 +27,22 @@ nav, #nav-checkbox {
 }
 
 nav {
-    position: absolute;
+    position: fixed;
     z-index: 1;
     background: rgb(5, 5, 5);
     border-radius: 3%;
     left: 0;
-    
+    margin-top: 17px;
 }
 
 header {
-    position: relative;
+    position: fixed;
+    width: 100%;
     color: #FF7400;
     background: rgb(5, 5, 5);
     padding: 20px 10px;
     font-size: 1.5rem;  
-    
+    z-index: 1;;
 }
 
 nav a {
@@ -44,11 +50,11 @@ nav a {
     padding: 10px 20px;
     font-size: 1.3rem;
     text-align: center;
-    
 }
 
 nav a:hover {
     color: #FF7400;
+    
 }
 
 @media (min-width: 720px){
@@ -106,7 +112,7 @@ nav a:hover {
     flex-wrap: wrap;
 }
 footer {
-    background-color: #262626;
+    background-color: rgb(5, 5, 5);
     padding-top: 25px;
     padding-bottom: 20px; 
 }
