--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,12 @@
 
 
+:root{
+    --clr-dark: #262626; 
+    --clr-dark-grey: #444444;
+    --clr-primary: #FF7400;
+}
+
+
 /* BODY STYLES */
 *{
     margin: 0;
@@ -8,13 +15,14 @@
 
 body {
     font-family: Montserrat, sans-serif;
-    background-color: #262626;
+    background-color: var(--clr-dark-grey);
     color: #fff;
 }
 a {
     text-decoration: none;
     color: #fff;
 }
+
 
 /* NAVBAR STYLING */
 
@@ -27,22 +35,22 @@ nav, #nav-checkbox {
 }
 
 nav {
-    position: fixed;
+    position: absolute;
     z-index: 1;
-    background: rgb(5, 5, 5);
-    border-radius: 3%;
+    background: var(--clr-dark);
     left: 0;
-    margin-top: 17px;
+    top: 69px;
 }
 
 header {
     position: fixed;
     width: 100%;
-    color: #FF7400;
-    background: rgb(5, 5, 5);
+    color: var(--clr-primary);
+    background: var(--clr-dark);
     padding: 20px 10px;
     font-size: 1.5rem;  
-    z-index: 1;;
+    z-index: 1;
+    display: block;
 }
 
 nav a {
@@ -53,9 +61,9 @@ nav a {
 }
 
 nav a:hover {
-    color: #FF7400;
-    
+    color: var(--clr-primary);
 }
+    
 
 @media (min-width: 720px){
     nav {
@@ -70,38 +78,13 @@ nav a:hover {
 
     nav a {
         display: inline-block;
+        width: 90px;
     }
 }
 
 
-
-/*
-
-@media(max-width: 720px) {
-    .footer-col, .footerImage, {
-        width: 50%;
-        margin-bottom: 30px;
-    }
-}
-@media(max-width: 720px) {
-    .footer-col, .footerImage {
-        width: 100%;
-    }
    
     
-}
-*/
-
-
-/* BOTTOM FEATURED GAMES */
-
-
-
-
-
-/* Products page styles */
-
-/* Footer style */
 
 .container {
     max-width: 1080px;
@@ -112,12 +95,12 @@ nav a:hover {
     flex-wrap: wrap;
 }
 footer {
-    background-color: rgb(5, 5, 5);
+    background-color: var(--clr-dark);
     padding-top: 25px;
     padding-bottom: 20px; 
 }
 .footer-col {
-    text-align: center;
+    justify-content: center;
     width: 25;
     padding: 12px 60px;
 }
@@ -126,32 +109,17 @@ footer {
     font-weight: bold;
     margin-bottom: 15px;
     font-weight: 700;
-    position: relative;
-}
-.footer-col .social-links  a {
-    display: inline-block;
-    height: 40px;
-    width: 40px;
-    background-color: rgba(255,255,255, 0.2);
-    margin-right: 5px;
-    margin: 0 5px 0;
-    text-align: center;
-    line-height: 40px;
-    border-radius: 50%;
-    transition: all 0.3s ease;
+    
 }
 
 .footer-col ul {
     list-style-type: none;
-    font-size: 14px;  
+    font-size: 14px; 
 }
 
 .footer-col li {
     text-align: left;
 }
-
-
-
 
 .lineBottom {
     border-bottom: 1px solid #FFFFFFFF;
@@ -176,4 +144,10 @@ footer {
     font-size: 14px;
     padding-top: 25px;;
     margin-bottom: 2px;
+}
+
+@media(max-width: 765px) {
+    .footer-col {
+        flex-direction: column;
+    }
 }
