--- a/styles/index.css
+++ b/styles/index.css
@@ -4,12 +4,9 @@
     display: flex;
     justify-content: center;
     padding-top: 100px;
+    overflow: hidden;
+    gap: 2em;
 }
-
-.image-border{
-    border: solid 1px var(--clr-primary);
-}
-
 
 .banner-image {
     width: 450px;
@@ -18,7 +15,7 @@
 }
 
 .banner-text {
-    margin-top: 100px;
+    margin-top: 170px;
     width: 450px;
     line-height: 50px;
     padding: 1rem;
@@ -36,8 +33,7 @@
     height: 35px;
     background-color: #FF7A00;
     color: #FFF;  
-    text-transform: uppercase;
-    
+    text-transform: uppercase; 
 }
 
 .information-line {
@@ -48,22 +44,39 @@
 }
 
 #line-icons {
+    display: flex;
+    width: 100px;
+    float: left;
     color: var(--clr-primary);
 }
 
+.orange-breakline {
+    width: 100%;
+    height: 3px;
+    overflow: hidden;
+    background-color: var(--clr-primary);
+}
+
+
+
 @media (max-width: 720px){
-    .banner-image {
-        
-    }
-    .banner-text {
-        top: 78%;
-        text-align: center;
+    .banner {
         flex-direction: column;
     }
-    #btn {
+    .banner-text {
         justify-content: center;
-        align-items: center;
         text-align: center;
+    }
+    .banner-text #btn {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+    }
+    .banner-image {
+        width: 300px;
+        height: auto;
+        left: 25%;
     }
 }
 
