--- a/styles/styles.css
+++ b/styles/styles.css
@@ -57,7 +57,8 @@ nav a {
 nav a:hover {
     color: var(--clr-primary);
 }
-    
+
+
 
 @media (min-width: 720px){
     nav {
@@ -67,6 +68,9 @@ nav a:hover {
     }
 
     .hamburger-icon {
+        display: none;
+    }
+    .cart-icon-mobile {
         display: none;
     }
 
