--- a/styles/styles.css
+++ b/styles/styles.css
@@ -81,6 +81,14 @@ nav a:hover {
 }
 
 
+.orange-breakline {
+    margin-top: 15px;
+    margin-bottom: 30px;
+    width: 100%;
+    height: 2px;
+    background-color: var(--clr-primary);
+}
+
    
     
 
