--- a/styles/viewcart.css
+++ b/styles/viewcart.css
@@ -7,47 +7,76 @@ main {
 }
 
 
-.cart-container {
+
+.basket-container {
     display: flex;
-    width: 100%;
+    overflow: hidden;
+}
+
+.basket-options {
+    display: flex;
+    align-items: flex-end;
+    font-size: 25px;
+    width: 80%;
+    height: 50px;  
+    padding-bottom: 10px;
+}
+.cart-links {
+    display: flex;
+    align-items: flex-end;
+    padding-bottom: 10px;
+}
+.basket-sections {
+    display: flex;
+    padding-top: 50px;    
+    justify-content: center;
+}
+.section-name {
+    width: 300px;    
+}
+.game-container {
+    display: flex;
+    padding: 30px;
     justify-content: space-evenly;
-    font-size: 1.5rem;
-    font-weight: 700;
+    border-top: 1px solid var(--clr-primary);
+    border-bottom: 1px solid var(--clr-primary); 
 }
-.orange-breakline {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    
-}
-
-.cart-info {
-    width: 100%; 
-    
-}
-
-.cart-titles {
-    background-color:orange;
+.basket-img {
+    width: 200px;
+    height: auto;
     text-align: center;
-    justify-content: space-evenly;   
-}
+    margin-top: 20px;
 
-.cart-img1 {
-    width: 100px;
+}
+.basket-img img {
+    width: 120px;
     height: auto;
 }
 
-.total-amount-container {
-    display: flex;
-    width: 120px;
-    height: 200px;
+.product-price {
+    width: 300px;
+    text-align: center;
 }
-.payment-information {
-    flex-direction: column;
+.total-price {
+    width: 300px;
+    text-align: center;
 }
-
-/*
-<div class="plus-minus-container">
-    <div class="minus">-</div>
-    <div class="total-products">1</div>
-    <div class="plus">+</div>
-*/
+.game-quantity {
+    margin-top: 65px;
+    padding-top: 2px;
+    width: 200px;
+    text-align: center;
+    height: 50px;
+    width: 150px;
+    background-color: var(--clr-dark);
+    border-radius: 15px;
+}
+.quantity-btn {
+    font-size: 15px;
+    font-weight: bold;
+    margin: 10px;
+    width: 35px;
+    height: 25px;
+    background-color: var(--clr-primary);
+    border-radius: 5px;
+}
