--- a/styles/viewcart.css
+++ b/styles/viewcart.css
@@ -136,24 +136,27 @@ input:focus::-webkit-input-placeholder {
 }
 .checkout-container {
     display: flex;
-    float: right;
     flex-direction: column;
-    margin-right: 50px;
-    width: 200px;
-    height: 200px;
-    margin-bottom: 50px;
-}
-.subtotal, .discount-amount, .totalamount-checkout {
-    float: left;
-    
-    margin-bottom: 30px;
-}
-.subtotalsum, .discountsum, .totalsum {
     float: right;
+    width: 300px;
+    height: 200px;
+    margin-top: 50px;
+    margin-right: 150px;
 }
+.subtotal {
+    word-spacing: 190px;
+}
+.discount-amount {
+    word-spacing: 196px;
+}
+.totalamount-checkout {
+    word-spacing: 220px;
+}
+
 .checkoutline {
     border: 1px solid var(--clr-primary);
     margin-bottom: 20px;
+    flex-direction: column;
 }
 .checkout-btn {
     margin: 0 auto;
@@ -166,7 +169,7 @@ input:focus::-webkit-input-placeholder {
 }
 
 footer {
-    margin-top: 50px;
+    margin-top: 100px;
 }
 
 
@@ -176,6 +179,13 @@ footer {
     }
     .quantity-container, .price-container, .totalprice-container {
         font-size: 0.8rem;
+
+    }
+    .checkout-container {
+        float: none;
+        margin: 0 auto;
+        margin-top: 100px;
+        line-height: 40px;
     }
     footer {
         margin-top: 100px;
@@ -197,8 +207,7 @@ footer {
         flex-direction: column;
     }
     .quantity-container {
-        padding: 30px;
-        
+        padding: 30px; 
     }
     .button-bg {
         position: relative;
@@ -223,7 +232,8 @@ footer {
         text-align: center;
     }
     .checkout-container {
-        margin-top: 30px;
+        margin-top: 50px;
+        line-height: 40px;
     }
 
 }
