--- a/styles/confirmed-payment.css
+++ b/styles/confirmed-payment.css
@@ -1,6 +1,7 @@
 @import url("variables.css");
 
 h1 {
+    margin-top: 30px;
     text-align: center;
     
 }
@@ -8,12 +9,13 @@ p {
     margin-top: 20px;
     line-height: 30px;
     text-align: center;
-    height: 300px;
+    height: 200px;
 }
 .one, .two, .three {
     background-color: var(--clr-primary);
     color: var(--clr-dark);
 }
+
 
 @media (max-width: 601px) {
     h1 {
