--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,8 +12,7 @@
 }
 
 main {
-    padding-top: 180px;
-    padding-bottom: 180px;
+    padding-bottom: 150px;
     overflow: hidden;
 }
 
@@ -25,6 +24,9 @@ body {
 a {
     text-decoration: none;
     color: #fff;
+}
+a:hover {
+    color: var(--clr-primary);
 }
 
 
@@ -68,6 +70,14 @@ nav a:hover {
     color: var(--clr-primary);
 }
 
+.buy-btn {
+    width: 100px;
+    height: 30px;
+    background-color: var(--clr-dark);
+    color: var(--clr-primary);
+    border-color: var(--clr-primary);
+    border-radius: 4px;
+}
 
 
 @media (min-width: 720px){
@@ -101,8 +111,15 @@ nav a:hover {
         flex-wrap: wrap;
         overflow-x: hidden;
     }
+    .footer-column h4 {
+        text-align: center;
+    }
+    .footer-column li {
+        text-align: center;
+    }
 }
 
+/* FOOTER STYLING */
 
 footer {
     width: 100%;
@@ -112,11 +129,11 @@ footer {
 footer a:hover {
     color: var(--clr-primary);
 }
-.logo-footer {
+.logo {
     align-items: center;
     text-align: center;
 }    
-.logo-footer img {
+.logo img {
     width: 250px;
     height: auto;
     margin-bottom: 10px;
@@ -142,87 +159,3 @@ footer a:hover {
     text-align: center;
     padding-bottom: 10px;
 }
-
-
-
-
-
-
-
-
-/*
-
-.orange-breakline {
-    margin-top: 15px;
-    margin-bottom: 30px;
-    width: 100%;
-    height: 2px;
-    background-color: var(--clr-primary);
-}
-
-.container {
-    max-width: 1080px;
-    margin: auto;
-}
-.row {
-    display: flex;
-    flex-wrap: wrap;
-}
-footer {
-    background-color: var(--clr-dark);
-    padding-top: 25px;
-    padding-bottom: 20px; 
-}
-.footer-col {
-    justify-content: center;
-    width: 25;
-    padding: 12px 60px;
-}
-.footer-col h4 {
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 15px;
-    font-weight: 700;
-    
-}
-
-.footer-col ul {
-    list-style-type: none;
-    font-size: 14px; 
-}
-
-.footer-col li {
-    text-align: left;
-}
-
-.lineBottom {
-    border-bottom: 1px solid #FFFFFFFF;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 12px;
-    padding-bottom: 12px;
-}
-
-.footerImage {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 270px;
-    height: auto;
-    
-}
-
-.copyright {
-    text-align: center;
-    font-size: 14px;
-    padding-top: 25px;;
-    margin-bottom: 2px;
-}
-
-@media(max-width: 765px) {
-    .footer-col {
-        flex-direction: column;
-    }
-}
-*/
